# polars

./: .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE.txt  README.md
.circleci/: config.yml
.github/ISSUE_TEMPLATE/: bug_report.md
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  conanfile.py  example.cpp
dependencies/: CMakeLists.txt
scripts/: build-with-cmake-withflags.sh  build-with-cmake.sh  run-cpp-tests.sh
src/cpp/polars/: CMakeLists.txt  Series.cpp  Series.h  SeriesMask.cpp  SeriesMask.h  TimeSeries.cpp  TimeSeries.h  TimeSeriesMask.cpp  TimeSeriesMask.h  WindowProcessor.cpp  WindowProcessor.h  numc.cpp  numc.h
src/cpp/zimmer/: TimeSeries.cpp  TimeSeries.h  TimeSeriesMask.cpp  TimeSeriesMask.h  numc.cpp  numc.h  time_series.cpp  time_series.h
src/python_bindings/zimmer/: timeseries_conversion.cpp  timeseries_conversion.h
tests/example_project/: CMakeLists.txt  main.cpp
tests/test_cpp/polars/: CMakeLists.txt  Expect.h  TestSeries.cpp  TestSeriesMask.cpp  TestTimeSeries.cpp  TestTimeSeriesMask.cpp  TestWindowProcessor.cpp  test_numc.cpp
tests/test_cpp/zimmer/: TestTimeSeries.cpp  TestTimeSeriesMask.cpp  test_numc.cpp
